# pkg/entities/market.go
@@ -2,9 +2,15 @@ package entities
 
 type Market int
 
+// MarketView defines the data structure of the concrete market.
 type MarketView struct {
 	MarketName  string `json:"name"`
 	Designation string `json:"emoji"`
+}
+
+// Markets defines the data structure of the supported markets.
+type SupportedMarkets struct {
+	Markets []MarketView `json:"markets"`
 }
 
 const (
@@ -14,9 +20,9 @@ const (
 )
 
 // GetMarkets returns the current supported markets.
-func GetMarkets() map[string][]MarketView {
-	return map[string][]MarketView{
-		"markets": {
+func GetSupportedMarkets() SupportedMarkets {
+	return SupportedMarkets{
+		Markets: []MarketView{
 			{"Wildberries", "🌸"},
 			{"Megamarket", "🛍️"},
 		},
